removed unnecessary classes - fixed 1px gap in btn-groups - fixes #832

--- a/src/nyc_trees/sass/partials/_buttons.scss
+++ b/src/nyc_trees/sass/partials/_buttons.scss
@@ -6,7 +6,7 @@
 }
 
 @for $i from 2 through 4 {
-  .btn-group-#{$i} {
+  .btn-group-#{$i}, .btn-group-toggles {
     vertical-align: middle;
     display: table;
     width: 100%;
@@ -19,25 +19,8 @@
       float: none;
       vertical-align: middle;
       padding: 8px;
+      width: 100%;
     }
-  }
-}
-
-.btn-group-2 {
-  .btn {
-    width: 50%;
-  }
-}
-
-.btn-group-3 {
-  .btn {
-    width: 33.334%;
-  }
-}
-
-.btn-group-4 {
-  .btn {
-    width: 25%;
   }
 }
 
